--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
     "Topic :: Scientific/Engineering",
 ]
 description = "EVERSE Research Software Quality Indicators"
-readme = { file = "README.rst", content-type = "text/x-rst" }
+readme = { file = "README.md", content-type = "text/markdown" }
 dynamic = ["version"]
 
 [project.optional-dependencies]
@@ -38,5 +38,4 @@ resqui = "resqui.cli:resqui"
 Homepage = "https://github.com/VERSE-ResearchSoftware/QualityPipelines"
 
 [tool.setuptools_scm]
-write_to = "resqui/src/resqui/version.py"
-root = ".."
+write_to = "src/resqui/version.py"
