--- a/.github/workflows/resqui.yml
+++ b/.github/workflows/resqui.yml
@@ -3,25 +3,18 @@ name: Run Resqui CI
 on:
   push:
     branches:
-      - main
-  workflow_dispatch:
-    inputs:
-      url:
-        description: 'The URL to process with resqui'
-        required: true
-      config:
-        description: 'Optional config file'
-        required: false
+      - initial-setup
 
 jobs:
   run-resqui:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run resqui
+      - name: Run resqui action
         uses: ./
         with:
-          url: ${{ github.event.inputs.url }}
-          config: ${{ github.event.inputs.config }}
+          url: "https://github.com/EVERSE-ResearchSoftware/QualityPipelines"
+          config: "example.yml"
