--- a/.github/workflows/resqui.yml
+++ b/.github/workflows/resqui.yml
@@ -17,4 +17,4 @@ jobs:
         uses: ./
         with:
           url: "https://github.com/EVERSE-ResearchSoftware/QualityPipelines"
-          config: "example.yml"
+          config: "example.json"
