--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-resqui/src/resqui/version.py
+src/resqui/version.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
