--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,4 +32,4 @@ jobs:
         run: make test
 
       - name: Run example
-        run: make example
+        run: resqui -c example.json -t ${{ secrets.GITHUB_TOKEN }} https://github.com/JuliaHEP/UnROOT.jl
