--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,7 @@ repos:
     rev: 7.0.0
     hooks:
     -   id: flake8
+        args: [--ignore=E501]
 -   repo: https://github.com/asottile/pyupgrade
     rev: v3.19.1
     hooks:
