--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,6 @@
 name: 'Run resqui'
-description: 'Installs resqui from GitHub and runs it on a provided URL with optional config file.'
+description: 'Installs resqui from GitHub and runs it with an optional config file.'
 inputs:
-  url:
-    description: 'The URL to process with resqui'
-    required: true
   config:
     description: 'Path to the configuration file (e.g., example.json)'
     required: false
@@ -19,14 +16,14 @@ runs:
     - name: Install resqui
       run: |
         python -m pip install --upgrade pip
-        pip install git+https://github.com/EVERSE-ResearchSoftware/QualityPipelines.git@initial-setup
+        pip install git+https://github.com/EVERSE-ResearchSoftware/QualityPipelines.git
       shell: bash
 
     - name: Run resqui
       run: |
         if [[ -n "${{ inputs.config }}" ]]; then
-          resqui -c "${{ inputs.config }}" -t ${{ secrets.GITHUB_TOKEN }} "${{ inputs.url }}"
+          resqui -c "${{ inputs.config }}" -t ${{ secrets.GITHUB_TOKEN }}
         else
-          resqui -t ${{ secrets.GITHUB_TOKEN }} "${{ inputs.url }}"
+          resqui -t ${{ secrets.GITHUB_TOKEN }}
         fi
       shell: bash
