--- a/action.yml
+++ b/action.yml
@@ -22,8 +22,8 @@ runs:
     - name: Run resqui
       run: |
         if [[ -n "${{ inputs.config }}" ]]; then
-          resqui -c "${{ inputs.config }}" -t ${{ secrets.RESQUI_GITHUB_TOKEN }}
+          resqui -c "${{ inputs.config }}" -t ${{ RESQUI_GITHUB_TOKEN }}
         else
-          resqui -t ${{ secrets.RESQUI_GITHUB_TOKEN }}
+          resqui -t ${{ RESQUI_GITHUB_TOKEN }}
         fi
       shell: bash
