--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,19 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - name: Validate required inputs
+      shell: bash
+      run: |
+        if [[ -z "${{ inputs.github_token }}" ]]; then
+          echo "ERROR: github_token is required"
+          exit 1
+        fi
+
+        if [[ -z "${{ inputs.dashverse_token }}" ]]; then
+          echo "ERROR: dashverse_token is required"
+          exit 1
+        fi
+
     - name: Set up Python 3.13
       uses: actions/setup-python@v5
       with:
