--- a/action.yml
+++ b/action.yml
@@ -22,7 +22,7 @@ runs:
     - name: Install resqui
       run: |
         python -m pip install --upgrade pip
-        pip install git+https://github.com/EVERSE-ResearchSoftware/QualityPipelines.git@rest-api
+        pip install git+https://github.com/EVERSE-ResearchSoftware/QualityPipelines.git@main
       shell: bash
 
     - name: Run resqui
