--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,9 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+src/resqui/plugins/rsfc_multitest.py
+config.json
+resqui_result.json
+resqui_result_pretty.json
+pretty_json.py
