--- a/.github/workflows/resqui.yml
+++ b/.github/workflows/resqui.yml
@@ -15,4 +15,4 @@ jobs:
         uses: ./
         with:
           url: "https://github.com/EVERSE-ResearchSoftware/QualityPipelines"
-          config: "example.json"
+          config: "configurations/basic.json"
