--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,4 +34,4 @@ jobs:
         run: make test
 
       - name: Run example
-        run: resqui -c example.json -t ${{ secrets.GITHUB_TOKEN }}
+        run: resqui -c configurations/basic.json -t ${{ secrets.GITHUB_TOKEN }}
